이거 가져가세요

--- a/yejo/src/main/resources/application.properties
+++ b/yejo/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=yejo
 
+#server port
+server.port=8081
+
 #Thymeleaf 설정
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
