--- a/yejo/src/main/resources/application.properties
+++ b/yejo/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=yejo
 
 #Thymeleaf 설정
 spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.cache=false
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.encoding=UTF-8
