--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,16 +11,16 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
-          java-version: '17'
+          java-version: '17'  # 사용할 Java 버전
+          distribution: 'adopt'  # JDK 배포판
 
       - name: Build WAR
-        run: |
-          mvn clean package  # Maven 빌드 명령어
+        run: mvn clean package  # Maven 빌드 명령어
         working-directory: ./yejo
 
       - name: FTP Deploy
