--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,5 +29,5 @@ jobs:
           server: ftp://yejo7048.cafe24.com  # 서버 주소
           username: ${{ secrets.FTP_USERNAME }}  # FTP 사용자 이름
           password: ${{ secrets.FTP_PASSWORD }}  # FTP 비밀번호
-          local-dir: ./target  # WAR 파일 위치
-          server-dir: /tomcat/webapps  # 서버 디렉토리
+          local-dir: ./yejo/target/  # WAR 파일 위치 (슬래시 추가)
+          server-dir: /tomcat/webapps/  # 서버 디렉토리 (슬래시 추가)
