--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
       - name: FTP Deploy
         uses: SamKirkland/FTP-Deploy-Action@4.0.0
         with:
-          server: ftp://yejo7048.cafe24.com  # 서버 주소
+          server: yejo7048.cafe24.com  # 서버 주소
           username: ${{ secrets.FTP_USERNAME }}  # FTP 사용자 이름
           password: ${{ secrets.FTP_PASSWORD }}  # FTP 비밀번호
           local-dir: ./yejo/target/  # WAR 파일 위치 (슬래시 추가)
