--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,8 +35,8 @@ jobs:
       - name: FTP Deploy
         uses: SamKirkland/FTP-Deploy-Action@4.0.0
         with:
-          server: yejo7048.cafe24.com  # 서버 주소
-          username: ${{ secrets.FTP_USERNAME }}  # FTP 사용자 이름
-          password: ${{ secrets.FTP_PASSWORD }}  # FTP 비밀번호
-          local-dir: ./yejo/target/  # WAR 파일 위치 (슬래시 추가)
-          server-dir: /tomcat/webapps/  # 서버 디렉토리 (슬래시 추가)
+          server: yejo7048.cafe24.com
+          username: ${{ secrets.FTP_USERNAME }}
+          password: ${{ secrets.FTP_PASSWORD }}
+          local-dir: ./yejo/target/  # WAR 파일이 포함된 디렉토리
+          server-dir: /tomcat/webapps/
