--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,7 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           local-dir: ./yejo/target/  # WAR 파일 경로
-          server-dir: /tomcat/webapps/
+          server-dir: /tomcat/webapps/yejo/
           log-level: verbose  # 추가적인 로그 정보를 원하면 사용 가능
 
 
