--- a/.github/workflows/test-ftp.yml
+++ b/.github/workflows/test-ftp.yml
@@ -19,8 +19,4 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           local-dir: ./  # 현재 디렉토리
-          server-dir: /yejo7048/tomcat/webapps/  # 수정된 FTP 서버의 경로
-          log-level: verbose
-          no-restore: true  # 상태 파일 생성을 방지
-          exclude: '*'  # 모든 파일을 제외
-          include: 'README.md'  # 포함할 파일 (테스트용)
+          server-dir: /yejo7048/tomcat/webapps/  # 수정된 FTP 서버의 경
