--- a/.github/workflows/test-ftp.yml
+++ b/.github/workflows/test-ftp.yml
@@ -19,6 +19,6 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           local-dir: ./  # 현재 디렉토리
-          server-dir: /yejo7048/tomcat/webapps/  # 수정된 FTP 서버의 경로
-          dry-run: true  # 실제 업로드 없이 연결 테스트만 수행
-          log-level: verbose  # 자세한 로그 레벨로 설정
+          server-dir: /yejo7048/tomcat/webapps/  # 서버의 새로운 경로
+          dry-run: false  # 실제 업로드 시도
+          log-level: verbose  # 상세한 로그 출력
