--- a/.github/workflows/test-ftp.yml
+++ b/.github/workflows/test-ftp.yml
@@ -13,12 +13,12 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Test FTP Connection
-        uses: SamKirkland/FTP-Deploy-Action@4.0.0
+        uses: martinkukolos/FTP-Deploy-Action@v1
         with:
           server: yejo7048.cafe24.com
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           local-dir: ./  # 현재 디렉토리
-          server-dir: tomcat/webapps/  # 서버의 새로운 경로
+          server-dir: /yejo7048/tomcat/webapps/  # 서버의 새로운 경로
           dry-run: false  # 실제 업로드 시도
           log-level: verbose  # 상세한 로그 출력
