--- a/.github/workflows/test-ftp.yml
+++ b/.github/workflows/test-ftp.yml
@@ -1,24 +1,23 @@
-name: Test FTP Connection
+name: FTP Deploy
 
-on: 
+on:
   push:
     branches:
-      - main  # 원하시는 브랜치로 수정 가능
+      - main  # main 브랜치에 푸시될 때 트리거됩니다
 
 jobs:
-  test-ftp:
+  ftp-deploy:
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
 
-      - name: Test FTP Connection
-        uses: martinkukolos/FTP-Deploy-Action@v1
-        with:
-          server: yejo7048.cafe24.com
-          username: ${{ secrets.FTP_USERNAME }}
-          password: ${{ secrets.FTP_PASSWORD }}
-          local-dir: ./  # 현재 디렉토리
-          server-dir: /yejo7048/tomcat/webapps/  # 서버의 새로운 경로
-          dry-run: false  # 실제 업로드 시도
-          log-level: verbose  # 상세한 로그 출력
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: FTP Deploy Action
+      uses: martinkukolos/FTP-Deploy-Action@v1
+      with:
+        ftpServer: "yejo7048.cafe24.com"  # FTP 서버 주소 입력
+        ftpUsername: ${{ secrets.FTP_USERNAME }}  # GitHub Secrets에 FTP 사용자명 설정
+        ftpPassword: ${{ secrets.FTP_PASSWORD }}  # GitHub Secrets에 FTP 비밀번호 설정
+        localDir: "./"  # 배포할 로컬 디렉토리 경로
+        remoteDir: "/yejo7048/tomcat/webapps/"  # 원격 서버에서 업로드될 경로
