--- a/yejo/src/main/resources/application.properties
+++ b/yejo/src/main/resources/application.properties
@@ -10,3 +10,15 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.servlet.content-type=text/html
+
+
+#JPA
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.datasource.url=jdbc:mysql://3.35.55.214:3306/yejo
+spring.datasource.username=yejo
+spring.datasource.password=yejo7048@
+spring.jpa.hibernate.ddl-auto=none
+
+#Redis
+spring.data.redis.host=3.35.55.214
+spring.data.redis.port=6379
