--- a/yejo/src/main/resources/application.properties
+++ b/yejo/src/main/resources/application.properties
@@ -10,3 +10,14 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.servlet.content-type=text/html
+
+#DB
+spring.datasource.url=jdbc:mysql://yejo7048.cafe24.com:3306/yejo7048
+spring.datasource.username=yejo7048
+spring.datasource.password=rhddb4862@@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+upload.path=src/main/resources/static/uploads
