--- a/yejo/src/main/resources/application.properties
+++ b/yejo/src/main/resources/application.properties
@@ -20,4 +20,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-upload.path=src/main/resources/static/uploads
+#upload.path=src/main/resources/static/uploads
+upload.path=/tomcat/webapps/ROOT/uploads
