배너 기능 완료

--- a/yejo/src/main/resources/application.properties
+++ b/yejo/src/main/resources/application.properties
@@ -22,3 +22,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 upload.path=src/main/resources/static/uploads
 #upload.path=/tomcat/webapps/ROOT/uploads
+
+#CDN
+cdn.server=iup.cdn1.cafe24.com
+cdn.user=yejo7048
+cdn.password=hsm402@@
+cdn.path=http://yejo7048.cdn1.cafe24.com/images/
