--- a/yejo/pom.xml
+++ b/yejo/pom.xml
@@ -31,7 +31,18 @@
 	<properties>
 		<java.version>17</java.version>
 	</properties>
+	
+	
 	<dependencies>
+		
+		
+		<dependency>
+		    <groupId>commons-net</groupId>
+		    <artifactId>commons-net</artifactId>
+		    <version>3.8.0</version> 
+		</dependency>
+
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
@@ -77,6 +88,8 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		
 	</build>
+	
 
 </project>
