--- a/yejo/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/yejo/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,5 +1,27 @@
-{"properties": [{
-  "name": "upload.path",
-  "type": "java.lang.String",
-  "description": "A description for 'upload.path'"
-}]}
+{"properties": [
+  {
+    "name": "upload.path",
+    "type": "java.lang.String",
+    "description": "A description for 'upload.path'"
+  },
+  {
+    "name": "cdn.server",
+    "type": "java.lang.String",
+    "description": "A description for 'cdn.server'"
+  },
+  {
+    "name": "cdn.password",
+    "type": "java.lang.String",
+    "description": "A description for 'cdn.password'"
+  },
+  {
+    "name": "cdn.user",
+    "type": "java.lang.String",
+    "description": "A description for 'cdn.user'"
+  },
+  {
+    "name": "cdn.path",
+    "type": "java.lang.String",
+    "description": "A description for 'cdn.path'"
+  }
+]}
