AWS 배포 때문에 수정이 조금 있었음 주석처리함

--- a/yejo/src/main/resources/application.properties
+++ b/yejo/src/main/resources/application.properties
@@ -15,10 +15,18 @@ spring.thymeleaf.servlet.content-type=text/html
 spring.datasource.url=jdbc:mysql://yejo7048.cafe24.com:3306/yejo7048
 spring.datasource.username=yejo7048
 spring.datasource.password=rhddb4862@@
+
+#spring.datasource.url=jdbc:mariadb://3.35.55.214:3306/yejo7048
+#spring.datasource.username=yejo
+#spring.datasource.password=yejo7048@
+
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.jpa.properties.hibernate.cache.use_second_level_cache=false
 spring.jpa.properties.hibernate.cache.use_query_cache=false
 
