--- a/yejo/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/yejo/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -23,5 +23,10 @@
     "name": "cdn.path",
     "type": "java.lang.String",
     "description": "A description for 'cdn.path'"
+  },
+  {
+    "name": "upload.path",
+    "type": "java.lang.String",
+    "description": "A description for 'upload.path'"
   }
 ]}
