err:No HttpMessageConverter for java.util.HashMap and content type 'application/x-www-form-urlencoded'

--- a/yejo/src/main/resources/application.properties
+++ b/yejo/src/main/resources/application.properties
@@ -43,4 +43,8 @@ cdn.path=http://yejo7048.cdn1.cafe24.com/images/
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
 
+#KAKAO
+kakao.restApiKey=e60d450717303e8acf11feed3a2d4e9f
+kakao.redirectUri=http://yejo7048.cafe24.com/oauth
+
 
