--- a/yejo/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/yejo/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -28,5 +28,15 @@
     "name": "upload.path",
     "type": "java.lang.String",
     "description": "A description for 'upload.path'"
+  },
+  {
+    "name": "kakao.restApiKey",
+    "type": "java.lang.String",
+    "description": "A description for 'kakao.restApiKey'"
+  },
+  {
+    "name": "kakao.redirectUri",
+    "type": "java.lang.String",
+    "description": "A description for 'kakao.redirectUri'"
   }
 ]}
