--- a/yejo/src/main/resources/application.properties
+++ b/yejo/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.application.name=yejo
 #server port
 server.port=8081
 
+server.servlet.session.timeout=10s
+
 #Thymeleaf 설정
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.cache=false
