yejointerior.com으로   properties 수정

--- a/yejo/src/main/resources/application.properties
+++ b/yejo/src/main/resources/application.properties
@@ -47,6 +47,6 @@ spring.servlet.multipart.max-request-size=5MB
 
 #KAKAO
 kakao.restApiKey=e60d450717303e8acf11feed3a2d4e9f
-kakao.redirectUri=http://yejo7048.cafe24.com/oauth
+kakao.redirectUri=https://yejointerior.com/oauth
 
 
