--- a/yejo/src/main/resources/application.properties
+++ b/yejo/src/main/resources/application.properties
@@ -49,4 +49,5 @@ spring.servlet.multipart.max-request-size=5MB
 kakao.restApiKey=e60d450717303e8acf11feed3a2d4e9f
 kakao.redirectUri=https://yejointerior.com/oauth
 
-
+#server.ssl.enabled=true
+#server.port=44333
