최종 (44333포트 및 SSL인증시에만 접근 가능하게 properties 설정)

--- a/yejo/src/main/resources/application.properties
+++ b/yejo/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=yejo
 
 #server port
-server.port=8081
+#server.port=8081
 
 server.servlet.session.timeout=10s
 
@@ -49,5 +49,5 @@ spring.servlet.multipart.max-request-size=5MB
 kakao.restApiKey=e60d450717303e8acf11feed3a2d4e9f
 kakao.redirectUri=https://yejointerior.com/admin/oauth
 
-#server.ssl.enabled=true
-#server.port=44333
+server.ssl.enabled=true
+server.port=44333
