http 접근 차단 jskey 추가

--- a/yejo/src/main/resources/application.properties
+++ b/yejo/src/main/resources/application.properties
@@ -47,9 +47,11 @@ spring.servlet.multipart.max-request-size=5MB
 
 #KAKAO
 kakao.restApiKey=e60d450717303e8acf11feed3a2d4e9f
+kakao.javaScriptKey=7122065f6de397246f0972135ecfb4ae
 kakao.redirectUri=https://yejointerior.com/admin/oauth
 
 server.ssl.enabled=true
+server.ssl.key-store=classpath:yejointerior.com_20241127ABDA0.jks
+server.ssl.key-store-password=koprk28q
+server.ssl.key-store-type=JKS
 server.port=44333
-
-#
